Fixed Google Maps distortion

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: #FFFFFF;
-    transform: translate3d(0,0,0);
+    /*transform: translate3d(0,0,0);*/
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
@@ -339,11 +339,15 @@ div#map {
 }
 
 div#map-canvas {
-     margin: 0px;
-     padding: 0px;
-     width: 100%;
-     height: 100%;
- }
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+}
+
+div#map-canvas img {
+    max-width:none;
+}
 
 .hidden {
     display: none;
